syntax = "proto3";

package todo;

message TodoDto {
    int32 id = 1;
    string text = 2;
}

message CreateTodoRequestDto {
    string text = 1;
}

message CreateTodoResponseDto {
    TodoDto todo = 1;
}

message GetTodosRequestDto {}

message GetTodosResponseDto {
    repeated TodoDto todos = 1;
}

message GetTodoRequestDto {
    int32 id = 1;
}

message GetTodoResponseDto {
    TodoDto todo = 1;
}

service Todo {
    rpc createTodo(CreateTodoRequestDto) returns (CreateTodoResponseDto);

    rpc getTodos(GetTodosRequestDto) returns (GetTodosResponseDto);

    rpc getTodo(GetTodoRequestDto) returns (GetTodoResponseDto);
}
